--- a/index.html
+++ b/index.html
@@ -1,36 +1,26 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>partij van stockbrood</title>
-        <link rel="stylesheet" href="page1.css">
-    </head>
-    <body>
-    
-        <div class="carousel">
+  <head>
+    <link rel="stylesheet" href="page1.css" />
+  </head>
 
-            <div class="carousel_item carousel_item--visible">
-                <img src="image1.jpg">
-            </div>
+  <body>
+    <div class="carousel">
+      <div class="carousel__item carousel__item--visible">
+        <img src="images/1.jpg" />
+      </div>
+      <div class="carousel__item">
+        <img src="images/2.jpg" />
+      </div>
+      <div class="carousel__item">
+        <img src="images/3.jpg" />
+      </div>
 
-            <div class="carousel_item">
-                <img src="image2.jpg">
-            </div>  
+      <div class="carousel__actions">
+        <button id="carousel__button--prev" aria-label="Previous slide"><</button>
+        <button id="carousel__button--next" aria-label="Next slide">></button>
+      </div>
+    </div>
 
-            <div class="carousel_item">
-                <img src="image3.png">
-            </div>
-                
-        </div>
-        <div class="carousel_actions">
-                <button id="carousel_button--prev" aria-label="Previous slide"></button>
-                <button id="carousel_button--next" aria-label="Next slide"></button>
-        </div>  
-
-
-
-<script src="pagina1.js"></script>
-
-
-
-    </body>
-</html>  
+    <script src="pagina1.js"></script>
+  </body>
+</html>
